--- a/package.json
+++ b/package.json
@@ -3,19 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-image-gallery": "^1.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
